--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 <body>
     <h1>Custom Video Player</h1>
     <video 
-        controls
-        src="videos/VID_20210626_162139.mp4" 
+                src="videos/VID_20210626_162139.mp4" 
         id="video" 
         class="screen" 
         poster="img/poster.png"
     ></video>
+    <div class="controls">
+        <button class="btn" id="play">
+            <i class="fa fa-play fa-2x"></i>
+        </button>
+        <button class="btn" id="stop">
+            <i class="fa fa-stop fa-2x"></i>
+        </button>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
