--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Custom Video Player</title>
     <link rel="stylesheet" href="css/progress.css">
     <link rel="stylesheet" href="css/progress.css">
-    <link rel="stylesheet" href="link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css" integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm" crossorigin="anonymous">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous"></head>
 <body>
     <h1>Custom Video Player</h1>
     <video 
@@ -26,6 +25,6 @@
 
     </div>
 
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
 </body>
 </html>
