--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom Video Player</title>
     <link rel="stylesheet" href="css/progress.css">
-    <link rel="stylesheet" href="css/progress.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous"></head>
 <body>
     <h1>Custom Video Player</h1>
@@ -13,8 +13,9 @@
         src="videos/VID_20210626_162139.mp4" 
         id="video" 
         class="screen" 
-        poster="img/poster.png"
-    ></video>
+        poster="img/poster.jpg"
+    >
+    </video>
     <div class="controls">
         <button class="btn" id="play">
             <i class="fa fa-play fa-2x"></i>
